# ricky

claude-adopter-finder/: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
claude-adopter-finder/config/: claude_desktop_config.json
claude-adopter-finder/src/: __init__.py  combined_scanner.py  github_scanner.py  job_scanner.py
